# file-converter

./: .buildconfig  .gitignore  Cargo.toml  README.md  com.github.Latesil.file-converter.json  meson.build
data/: com.github.Latesil.file-converter.appdata.xml.in  com.github.Latesil.file-converter.desktop.in  com.github.Latesil.file-converter.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: config.rs  file_converter.gresource.xml  filelistview.ui  main.rs  meson.build  startview.ui  window.rs  window.ui
src/stacks/: filelistview.rs  mod.rs  startview.rs
